# naivedsp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: CPackConfig.cmake  CopyIfNotExists.cmake  naivedspConfig.cmake.in
cmake/Modules/: naivedspCPackConfig.cmake  naivedspProjectPost.cmake  naivedspTargetProperties.cmake
naive_delay/: CMakeLists.txt
naive_delay/include/naivedsp/: delay.h  delay_defs.h  delay_params.h  delay_states.h
naive_delay/src/: delay.c
naive_delay/tests/delay/: CMakeLists.txt  config.toml  main.c  test_desc.c  test_desc.h
naive_fdn_reverb/: CMakeLists.txt
naive_fdn_reverb/include/naivedsp/: early_reflection.h  fdn_reverb.h  reverb.h  reverb_params.h  reverb_states.h
naive_fdn_reverb/src/: early_reflection.c  fdn_reverb.c  reverb.c  reverb_design.c  reverb_params.c
naive_fdn_reverb/tests/fdn_reverb/: CMakeLists.txt  config.toml  main.c
naive_fdn_reverb/tests/reverb/: CMakeLists.txt
naive_fdn_reverb_design/: CMakeLists.txt
naive_geq/: CMakeLists.txt
naive_geq/src/: geq.c
naive_geq/tests/geq/: CMakeLists.txt  main.c  test_desc.h
naive_geq_design/src/: geq_design.c
naive_linkwitz_riley_geq/include/naivedsp/: geq_coeffs.h  geq_design.h  geq_states.h
naive_paralell_geq/src/: geq_coeffs.c
naive_paralell_geq/tests/geq/: test_desc.c
naive_paralell_geq/tests/geq/refs/: geq-44k-5-bands-order-3-freqs-30-150-750-3750-gains-0.5-1.0-0.25-2.0-1.4.pcm
naive_parallel_geq_design/: CMakeLists.txt
naive_peq/: CMakeLists.txt
naive_peq/include/naivedsp/: peq.h  peq_coeffs.h  peq_states.h
naive_peq/src/: peq.c  peq_coeffs.c
naive_peq_design/: CMakeLists.txt
naive_peq_design/include/naivedsp/: peq_design.h
naive_peq_design/src/: peq_design.c
naive_reverb/: CMakeLists.txt
naive_reverb/include/naivedsp/: reverb.h  reverb_params.h  reverb_states.h
naive_reverb/tests/reverb/src/: main.c
naive_reverb_design/include/naivedsp/: reverb_design.h
naive_stereo_delay/: CMakeLists.txt
naive_stereo_delay/include/naivedsp/: stereo-delay.h  stereo_delay.h
naive_stereo_delay/src/: stereo-delay.c  stereo_delay.c
naive_stereo_delay/tests/stereo-delay/: CMakeLists.txt
naive_stereo_delay/tests/stereo_delay/: CMakeLists.txt  config.toml  main.c
naive_stereo_limiter/: CMakeLists.txt
naive_stereo_limiter/include/naivedsp/: stereo_limiter.h
naive_stereo_limiter/src/: stereo_limiter.c
naive_stereo_limiter/tests/stereo_limiter/: CMakeLists.txt  config.toml  main.c
naive_test/: CMakeLists.txt
naive_test/include/naivedsp/: test.h  test_desc.h
naive_test/inputs/: Sweep_-15dBFS_44k_16bit_1ch.pcm  Sweep_-15dBFS_44k_16bit_1ch.pkf  Sweep_-15dBFS_LR_Phase0_44k_16bit_2ch.pcm  Sweep_-15dBFS_LR_Phase0_44k_16bit_2ch.pkf  Sweep_-15dBFS_LR_Phase90_44k_16bit_2ch.pcm  Sweep_-15dBFS_LR_Phase90_44k_16bit_2ch.pkf
naive_test/src/: test.c  test_desc.c
naive_xover_geq/include/naivedsp/: geq.h
naivedsp_common/: CMakeLists.txt
naivedsp_common/include/naivedsp/: assert.h  conversion.h  delay_buf.h  delay_buf_def.h  err.h  iir.h  iir_coeffs.h  iir_states.h  math.h  math_types.h  memory.h  misc.h  platdefs.h  typedefs.h
naivedsp_common/src/: conversion.c  delay_buf.c  iir.c  iir_coeffs.c  iir_design.c  iir_states.c  math.c  memory.c  opt.h
naivedsp_common/tests/iir/: CMakeLists.txt  config.toml  main.c  test_desc.c  test_desc.h
naivedsp_common/tests/iir/refs/: iir-1st-allpass-44k-freq-500.pcm  iir-1st-butterworth-highpass-44k-freq-100.pcm  iir-1st-butterworth-lowpass-44k-freq-10000.pcm  iir-1st-highpass-44k-freq-100.pcm  iir-1st-lowpass-44k-freq-10000.pcm  iir-2nd-allpass-44k-freq-500-q-0.7.pcm  iir-2nd-bandpass-44k-freq-500-q-0.7.pcm  iir-2nd-bandstop-44k-freq-500-q-0.7.pcm  iir-2nd-butterworth-bandpass-44k-freq-500-q-0.7.pcm  iir-2nd-butterworth-bandstop-44k-freq-500-q-0.7.pcm  iir-2nd-butterworth-highpass-44k-freq-100.pcm  iir-2nd-butterworth-lowpass-44k-freq-10000.pcm  iir-2nd-high-shelf-44k-freq-5000-q-0.7-gain-0.5.pcm  iir-2nd-high-shelf-44k-freq-5000-q-0.7-gain-2.0.pcm  iir-2nd-highpass-44k-freq-100-q-0.7.pcm  iir-2nd-low-shelf-44k-freq-200-q-0.7-gain-0.5.pcm  iir-2nd-low-shelf-44k-freq-200-q-0.7-gain-2.0.pcm  iir-2nd-lowpass-44k-freq-10000-q-0.7.pcm  iir-2nd-peak-44k-freq-500-q-0.7-gain-2.0.pcm
naivedsp_common_design/include/naivedsp/: iir_design.h
